# themer

./: .gitignore  Cargo.toml  README.md  Trunk.toml  rustfmt.toml
crates/themer/: Cargo.toml
crates/themer-core/: Cargo.toml  README.md
crates/themer-core/src/: browser.rs  lib.rs  traits.rs
crates/themer-macros/: Cargo.toml  README.md
crates/themer-macros/src/: lib.rs
crates/themer/src/: browser_preference.rs  lib.rs  theme_context.rs  theme_provider.rs
crates/themer/src/yew/: hooks.rs  mod.rs  theme_provider.rs
examples/3_themes/: Cargo.toml
examples/3_themes/src/: lib.rs  main.rs  my_theme.rs  themes.rs
examples/browser_preferences/src/: lib.rs  main.rs  my_theme.rs  themes.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/read-browser-preference/: Cargo.toml  index.html
examples/read-browser-preference/src/: main.rs
examples/storage/: Cargo.toml
examples/storage/src/: main.rs  my_theme.rs  my_theme_spec.rs  my_themes.rs
examples/theme-switcher/: Cargo.toml
examples/theme-switcher/src/: lib.rs  main.rs  my_theme.rs  my_theme_spec.rs  my_themes.rs
examples/theme_switcher/: Cargo.toml  index.html
examples/theme_switcher/src/: main.rs  my_theme.rs  themes.rs
examples/use-browser-theme/: Cargo.toml
src/: browser.rs  browser_preference.rs  lib.rs  theme_context.rs  theme_provider.rs  traits.rs
src/yew/: theme_context.rs  theme_provider.rs
