[package]
name = "themer"
version = "0.1.0"
edition = "2021"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size (aggressive)
opt-level = 'z'
# optimization for size
#opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.83"
gloo-storage = "0.2.2"
serde = "1.0.145"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Storage",
    "Window",
    "Element",
]