[workspace]
members = [
    "crates/themer",
    "crates/themer-core",
    "crates/themer-macros",

    "examples/minimal",
    "examples/read-browser-preference",
    "examples/storage",
    "examples/theme-switcher",
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"