[package]
name = "themer-core"
description = "Non-complicated theme management for Yew"
version = "0.1.0"
authors = ["Spencer C. Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/simbleau/themer"
keywords = [
    "CSS",
    "web",
    "css-in-rust",
    "yew"
]
categories = ["wasm", "web-programming"]
readme = "README.md"

[dependencies]
gloo-storage = "0.2.2"
serde = { version = "1.0.151", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Storage",
    "Window",
    "MediaQueryList",
]
