[package]
name = "themer-core"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
gloo-storage = "0.3"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = [
    "Storage",
    "Window",
    "MediaQueryList",
] }
