[package]
name = "themer-macros"
description = "Procedural macros for Themer"
version = "0.1.0"
authors = ["Spencer C. Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simbleau/themer"

[lib]
proc-macro = true

[dependencies]
themer-core = { path = "../themer-core" }
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full", "extra-traits"] }