[package]
name = "themer"
description = "Non-complicated theme management for Yew"
version = "0.2.0"
authors = ["Spencer C. Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/simbleau/themer"
keywords = ["CSS", "web", "css-in-rust", "yew"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
themer-core = { path = "../themer-core" }
themer-macros = { path = "../themer-macros", optional = true }
yew = { version = "0.20.0", optional = true }

[features]
default = ["macros", "yew_integration"]
macros = ["themer-macros"]
yew_integration = ["yew"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
