[package]
name = "example-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
themer = {path = "../../crates/themer"}
stylist = { version = "0.11.0", features = [ "yew_integration"] }
yew = { version = "0.20.0", features = ["csr"] }
serde = "1.0.145"
once_cell = "1.15.0"
web-sys = {version="0.3.60", features=["HtmlLabelElement", "HtmlElement"]}