[package]
name = "example-storage"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
themer = { path = "../.." }
stylist = { version = "0.13", features = ["yew_integration"] }
yew = { version = "0.21", features = ["csr"] }
serde = "1.0"
once_cell = "1.15"
web-sys = { version = "0.3", features = ["HtmlLabelElement", "HtmlElement"] }
