[package]
name = "example-theme-switcher"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
themer = { path = "../.." }
stylist = { version = "0.13", features = ["yew_integration"] }
yew = { version = "0.21", features = ["csr"] }
once_cell = "1.15.0"
